--- a/index.html
+++ b/index.html
@@ -248,15 +248,13 @@
         <div class="row">
             <div class="col-4 font-white">
                 <p>work: 519-500-3951</p>
-                <p>home: 819-319-9407</p>
             </div>
             <div class="col-4 font-white">
-                <p>1474 Heatherington Road,</p>
-                <p>Ottawa,</p>
+                <p>214 Doon Valley Drive,</p>
+                <p>Kitchener,</p>
                 <p>ON,Canada</p>
             </div>
             <div class="col-4 font-white">
-                <p>ahal0001@algonquinlive.com</p>
                 <p>kahalpara49@gmail.com</p>
                 <p><i class="fa fa-facebook-official social-icon font-white" style="padding-right: 1em;"></i>
                     <i class="fa fa-github-square social-icon font-white" style="padding-right: 1em;"></i>
@@ -274,19 +272,17 @@
         <div class="row">
             <div class="col-12">
                 <p>work: 519-500-3951</p>
-                <p>home: 819-319-9407</p>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
-                <p>1474 Heatherington Road,</p>
-                <p>Ottawa,</p>
+                <p>214 Doon Valley Drive,</p>
+                <p>Kitchener,</p>
                 <p>ON,Canada</p>
             </div>
         </div>
         <div class="row">
             <div class="col-12">
-                <p>ahal0001@algonquinlive.com</p>
                 <p>kahalpara49@gmail.com</p>
             </div>
         </div>
